# autonomous-chess

./: .gitignore  README.md
So101ChessBot/: .gitignore  README.md  capture_images.py  chess_engine.py  commands.txt  data_merge_help.txt  move_to.py  play_chess.py  record.py  requirements.txt  ros_bridge.py
So101ChessBot/.calibrations/: joint_calibration.json
So101ChessBot/lerobot_chess_bot/: check_mesh.py  chess_board.py  chess_mover.py  ros2_bridge_client.py  so101_ik.py
animated-knight/: .gitignore  README.md  pyproject.toml  ros_bridge_server.py
chess-messages/: CMakeLists.txt  package.xml
chess_manager/: pyproject.toml  requirements.txt
chess_manager/chess_manager/: __init__.py  __main__.py  chess_teacher.py  config.py  main.py  models.py  ros_bridge_server.py  ros_client.py  state_manager.py  teacher.py  voice_in.py  voice_out.py  websocket_server.py
chess_manager/chess_manager/config/: default.yaml
chess_manager/chess_manager/voice/: __init__.py  chess_stt.py  chess_tts.py  elevenlabs_test.py  keys.py
chess_manager/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
chess_manager/frontend/src/: App.tsx  index.css
chess_manager/frontend/src/components/: ChessBoard.tsx  ConnectionStatus.tsx  DeliberationPanel.tsx  FenDisplay.tsx  GameControls.tsx  MoveHistory.tsx  NavigationBar.tsx  PieceAvatar.tsx  StateIndicator.tsx  VoiceStatusIndicator.tsx
chess_manager/frontend/src/services/: websocket.ts
chess_manager/frontend/src/stores/: gameStore.ts
venividivici/: .gitignore  README.md  requirements.txt
(+92 files in other folders)
