[project]
name = "chess-manager"
version = "0.1.0"
description = "Central orchestrator for the chess robot system"
requires-python = ">=3.11"
dependencies = [
    "python-chess>=1.10.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "mistralai",
    "pyaudio",
    "elevenlabs",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chess_manager"]
